--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.firebaseui:firebase-ui:1.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.volley:volley:1.0.0'
+//    compile 'org.apache.httpcomponents:httpcore:4.4'
+//    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+//    compile('org.apache.httpcomponents:httpmime:4.3') {
+//        exclude module: "httpclient"
+//    }
 }
