--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui:1.2.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'io.realm:realm-android:0.84.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 
 }
