--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,11 @@
         <activity
             android:name=".Authentication.AuthenticationActivity"
             android:label="@string/title_activity_authentication"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Chatting.Messages.MessagesActivity"
+            android:label="@string/title_activity_messages"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
