--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
+        android:largeHeap="true"
+
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".NavigationActivity"
             android:label="@string/app_name"
@@ -32,6 +34,7 @@
         <activity
             android:name=".News.NewsDetails"
             android:label="@string/title_activity_news_details"
+            android:hardwareAccelerated="false"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Authentication.AuthenticationActivity"
